# kosmonaut

./: .gitmodules  CMakeLists.txt  CONTRIBUTE  ChangeLog  INSTALL  Makefile  NEWS  README  TODO  astronaut.c
include/: astronaut.h  kosmonaut.h
src/: astronaut.c  kosmonaut.c
